--- a/HelloWorldUsingServelt/pom.xml
+++ b/HelloWorldUsingServelt/pom.xml
@@ -7,6 +7,17 @@
     <groupId>org.example</groupId>
     <artifactId>HelloWorldUsingServelt</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.5.Release</version>
+    </parent>
+    <dependencies>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
