--- a/HelloWorldUsingServelt/pom.xml
+++ b/HelloWorldUsingServelt/pom.xml
@@ -18,6 +18,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <version>8.5.34</version>
+        </dependency>
     </dependencies>
 
 </project>
